--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,8 @@
-.fixed-head {
+.hidden508 {
+    position: absolute;
+    /* transparent white */
+    color: rgba(1,1,1,0);
+    z-index: -1;
 }
 
 /* Avoid navbar, from bootstrap example */
