--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -31,3 +31,8 @@ body {
 /* keep the icons on the same line */
 #filters a span.ui-icon { float: left }
 .ui-icon-blank { background-position: 100px 100px }
+
+table { margin: 1em }
+table tr td { padding-right: 2em }
+
+.hidden { display: none } 
