--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,10 @@
 .hidden508 {
     position: absolute;
     /* transparent white */
-    color: rgba(1,1,1,0);
+    color: #fff;
+    opacity: 0;
+    /* IE 8 */
+    filter: opacity(0.0);
     z-index: -1;
 }
 
