--- a/app/views/GtfsFeeds/feedsNoAgencies.html
+++ b/app/views/GtfsFeeds/feedsNoAgencies.html
@@ -10,7 +10,7 @@
   <tbody>
     #{list items:noAgency, as:'agency'}
       <tr>
-        <td><a href="${agency.agencyUrl}>${agency.agencyName}</a></td>
+        <td><a href="${agency.agencyUrl}">${agency.agencyName}</a></td>
       </tr>
     #{/list}
   </tbody>
