--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,3 +39,5 @@ table tr td, table tr th { padding-right: 2em }
 /* colors copied from Bootstrap's form validation, except we're not using red/green together */
 .feedExpired { color: #B94A48; font-weight: bold }
 .feedToExpire { color: #C09853; font-weight: bold }
+
+.public { background:#cfc }
