More admin interface improvements. #15.

--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -5,9 +5,9 @@
 
 <ul>
     <li><a href="feedsNoAgencies">Feeds with no agencies 
-        <span class="label label-info">${feedsNoAgency}</span></a></li>
-    <li><a href="agenciesNoMetros">Agencies with no metro areas 
-        <span class="label label-info">${agenciesNoMetro}</span></a></li> 
+        <span class="badge badge-info">${feedsNoAgency}</span></a></li>
+    <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas 
+        <span class="badge badge-info">${agenciesMultiAreas}</span></a></li> 
 </ul>
         
         
