--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,8 +25,9 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                <a class="brand" href="#">Transit Data Dashboard</a>
-                <h4>Administration</h4>
+                    <a class="brand" href="#">Transit Data Dashboard</a>
+                    <h4>Administration</h4>
+                </div>
             </div>
         </div>
         <div class="container">
