Remove unreferenced stored feeds.

--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -7,7 +7,8 @@
     <li><a href="feedsNoAgencies">Feeds with no agencies 
         <span class="badge badge-info">${feedsNoAgency}</span></a></li>
     <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas 
-        <span class="badge badge-info">${agenciesMultiAreas}</span></a></li> 
+        <span class="badge badge-info">${agenciesMultiAreas}</span></a></li>
+    <li><a href="removeUnreferencedStoredFeeds">Remove unreferenced stored feeds</li> 
 </ul>
         
         
