Tools to manually sync Google Transit list of agencies with DB.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,6 +17,7 @@
         <script src="/javascripts/jquery-1.7.2.min.js"></script>
         <script src="/javascripts/client.js"></script>
         <script src="/js/jquery-ui-1.8.21.custom.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
         
         #{get 'moreStyles' /} 
         #{get 'moreScripts' /}
