More work on Google mapping.

--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -8,6 +8,8 @@
         <span class="badge badge-info">${feedsNoAgency}</span></a></li>
     <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas 
         <span class="badge badge-info">${agenciesMultiAreas}</span></a></li>
+    <li><a href="unmatchedMetro">Unmatched metro areas
+        <span class="badge badge-info">${unmatchedMetro}</span></a></li>
     <li><a href="unmatchedPrivate">Unmatched private GTFS agencies 
         <span class="badge badge-info">${unmatchedPrivate}</span></a></li>
     <li><a href="removeUnreferencedStoredFeeds">Remove unreferenced stored feeds</li> 
