--- a/app/views/Admin/splitMetroInteractively.html
+++ b/app/views/Admin/splitMetroInteractively.html
@@ -22,7 +22,7 @@ Select the agencies to include in each resulting metro:
 <input type="submit" />
 <input type="hidden" name="splits" value="${splits}" />
 <input type="hidden" name="original" value="${original.id}" />
-<table>
+<table class="table table-striped">
     <thead>
         <th>Agency</th>
         %{ for (int i = 1; i <= splits; i++) { }%
