--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -77,4 +77,11 @@ table tr td, table tr th { padding-right: 2em }
 
 .numVotes { padding-right: 7px }
 
-.modal { overflow: hidden }
+/* http://stackoverflow.com/questions/9416985 */
+.modal { overflow: hidden; max-height: 100%; overflow: auto; }
+.modal-body { max-height: 600px }
+
+.modal > iframe { max-height: 75% }
+
+.darkclose { font-size: 20px; font-weight: bold; margin: 5px; 
+	     line-height: 20px; opacity: 0.8; }
