--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -20,7 +20,7 @@
 <ul>
     <li><a href="feedsNoAgencies">Feeds with no agencies 
         <span class="badge badge-info">${feedsNoAgency}</span></a></li>
-    <li><a href="agenciesMultiAreas">Agencies matching no metro areas 
+    <li><a href="agenciesNoMetro">Agencies matching no metro areas 
         <span class="badge badge-info">${agenciesNoMetro}</span></a></li>
     <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas 
         <span class="badge badge-info">${agenciesMultiAreas}</span></a></li>
