typo in action link.

--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -20,9 +20,9 @@
 <ul>
     <li><a href="feedsNoAgencies">Feeds with no agencies 
         <span class="badge badge-info">${feedsNoAgency}</span></a></li>
-    <li><a href="agenciesNoMetro">Agencies matching no metro areas 
+    <li><a href="agenciesNoMetros">Agencies matching no metro areas 
         <span class="badge badge-info">${agenciesNoMetro}</span></a></li>
-    <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas 
+    <li><a href="agenciesMultiAreas">Agencies matching multiple metro areas
         <span class="badge badge-info">${agenciesMultiAreas}</span></a></li>
     <li><a href="unmatchedMetro">Unmatched metro areas
         <span class="badge badge-info">${unmatchedMetro}</span></a></li>
