--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -28,7 +28,12 @@
         <span class="badge badge-info">${unmatchedMetro}</span></a></li>
     <li><a href="unmatchedPrivate">Unmatched private GTFS agencies 
         <span class="badge badge-info">${unmatchedPrivate}</span></a></li>
-    <li><a href="removeUnreferencedStoredFeeds">Remove unreferenced stored feeds</li> 
+</ul>
+
+<h2>Other tasks</h2>
+<ul>
+    <li><a href="chooseAgency?redirectTo=editRealtimeFeeds%3Fagency.id%3D">Configure real time updates</a></li>
+    <li><a href="removeUnreferencedStoredFeeds">Remove unreferenced stored feeds</a></li> 
 </ul>
         
         
