--- a/app/views/Admin/splitMetroInteractively.html
+++ b/app/views/Admin/splitMetroInteractively.html
@@ -22,6 +22,7 @@ Select the agencies to include in each resulting metro:
 <input type="submit" />
 <input type="hidden" name="splits" value="${splits}" />
 <input type="hidden" name="original" value="${original.id}" />
+
 <table class="table table-striped">
     <thead>
         <th>Agency</th>
@@ -32,7 +33,12 @@ Select the agencies to include in each resulting metro:
     <tbody>
     %{ for (agency in original.agencies) { }%
         <tr>
-            <td title="%{ for (uzaName in agency.uzaNames) { }%${uzaName}, %{ } }%">${agency.name}</td>
+            <td title="%{ for (uzaName in agency.uzaNames) { }%${uzaName}, %{ } }%"
+                 %{ if (agency.feeds.size() > 0) { }%
+                    *{ copied from Bootstrap alert-success }*
+                    style="background-color: #dff0d8"
+                 %{ } }%>
+                 ${agency.name}</td>
             %{ for (int i = 1; i <= splits; i++) { }%
                 <td><input type="checkbox" name="metro${i}" value="${agency.id}" /></td>
             %{ } }%
