--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -85,3 +85,11 @@ table tr td, table tr th { padding-right: 2em }
 
 .darkclose { font-size: 20px; font-weight: bold; margin: 5px; 
 	     line-height: 20px; opacity: 0.8; }
+	     
+/* top bar social networks */
+.shareTop { position: relative; top:7px; left: 20px }
+.shareTopPlusOne { top: 10px }
+
+.leftbar { margin-top: 50px; margin-right: 10px; float: left; height: 100% }
+.bottom { position: absolute; bottom: 15px}
+.disabledLink, .disabledLink:hover, .disabledLink:visited { color: #999; text-decoration: none }
