Prevent carousel wraparound.

--- a/app/views/carousel.html
+++ b/app/views/carousel.html
@@ -18,6 +18,7 @@
 <div id="carousel" class="carousel slide">
     <div class="carousel-inner">
         #{doLayout /}
+        <div class="item">Done</div>
     </div>
 </div>
 
