fix broken link in admin.

--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -41,7 +41,7 @@
     <li><a href="removeUnreferencedStoredFeeds">Remove unreferenced stored feeds</a></li>
     <li><a href="/admin/mapfeeds.html">Map feeds to agencies</a></li>
     <li><a href="../mapper/fetchGtfs">Fetch new GTFS</a></li>
-    <li><a href="../mapper/generateDeploymentPlansForAllMetros">Generate deployment plans for
+    <li><a href="generateDeploymentPlansForAllMetros">Generate deployment plans for
         <i>all</i> enabled metros with transit</a></li>
     <li><a href="/crud">CRUD DB interface</a></li>
     <li>
